fix: fix themes overflowing

--- a/client/src/scss/hacks.scss
+++ b/client/src/scss/hacks.scss
@@ -99,3 +99,8 @@
 .scheduleView .sessionTile-speakers {
   display: none;
 }
+
+// TODO: move back to deconf
+.icon-text {
+  display: inline-block;
+}
